--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -321,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.prompts import PromptTemplate, HumanMessagePromptTemplate, ChatPromptTemplate, SystemMessagePromptTemplate"
+    "from langchain_core.prompts import PromptTemplate, HumanMessagePromptTemplate, ChatPromptTemplate, SystemMessagePromptTemplate"
    ]
   },
   {
@@ -1647,7 +1647,7 @@
    "id": "3bd08f09-26fb-44b2-b94d-91ee02fca010",
    "metadata": {},
    "source": [
-    "大家也應該練習過，給予一組單詞，用單詞寫出一篇文章"
+    "大家在國小時也應該練習過，給予一組單詞，用單詞寫出一篇文章"
    ]
   },
   {
@@ -1734,6 +1734,281 @@
     "\n",
     "# Save the PDF\n",
     "pdf.output(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "338cc379-4888-44e7-94d6-2840dd751b68",
+   "metadata": {},
+   "source": [
+    "## Gradio Application\n",
+    "\n",
+    "### Basic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8a6803f-4c0b-469e-a60a-fad6765bbf62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "\n",
+    "\n",
+    "model = ChatGoogleGenerativeAI(\n",
+    "    model=\"gemini-2.0-flash\",\n",
+    "    temperature=0,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=6,\n",
+    "    disable_streaming=False\n",
+    ")\n",
+    "\n",
+    "def func_call(text):\n",
+    "    response = model.invoke(text)\n",
+    "    return response.content    \n",
+    "\n",
+    "demo = gr.Interface(func_call,\n",
+    "             gr.Textbox(placeholder=\"Enter sentence here...\", label=\"My Input\"), \n",
+    "             gr.Textbox(lines=10, label=\"My Output\"),\n",
+    "             title=\"My Title\")\n",
+    "\n",
+    "demo.launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ceff78b-b8a9-4bb4-8725-92829d8a3075",
+   "metadata": {},
+   "source": [
+    "### Advanced: Gradio App 格式控制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4288708e-605a-4200-ade7-1720e1da68be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with gr.Blocks(title=\"Title\") as demo:\n",
+    "    gr.Markdown(\"### This is a demo\")\n",
+    "\n",
+    "    with gr.Row():\n",
+    "        # LEFT SIDE\n",
+    "        with gr.Column(scale=1):\n",
+    "            input_box = gr.Textbox(\n",
+    "                lines=1,\n",
+    "                label=\"USER INPUT\",\n",
+    "                placeholder=\"Enter sentence here...\"\n",
+    "            )\n",
+    "\n",
+    "            with gr.Row():\n",
+    "                submit_btn = gr.Button(\"Submit\", variant=\"primary\")\n",
+    "                clear_btn = gr.ClearButton([input_box], value=\"Clear\")\n",
+    "            \n",
+    "            # Examples placed directly under the input\n",
+    "            gr.Examples(\n",
+    "                examples=[[\"abc\"], [\"cde\"], [\"xyz\"]],\n",
+    "                inputs=input_box,\n",
+    "                examples_per_page=None   # show all rows\n",
+    "            )\n",
+    " \n",
+    "        # RIGHT SIDE\n",
+    "        with gr.Column(scale=1):\n",
+    "            output_box = gr.Textbox(\n",
+    "                lines=15,\n",
+    "                label=\"Output\"\n",
+    "            )\n",
+    "\n",
+    "    submit_btn.click(fn=func_call, inputs=input_box, outputs=output_box)\n",
+    "\n",
+    "demo.launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ae92f7-f1a3-46fa-b090-09fe72aa0717",
+   "metadata": {},
+   "source": [
+    "### 作文內容分析\n",
+    "\n",
+    "#### 輸出格式控制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ccba8f4-fa42-4f54-9f9e-26e7ffe6eb92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pro(BaseModel):\n",
+    "    name: List[str] = Field(description=\"A python list of strength of the article. The response should be in traditional Chinese (繁體中文)\")\n",
+    "\n",
+    "class Con(BaseModel):\n",
+    "    name: List[str] = Field(description=\"A python list of potential improvements. The response should be in traditional Chinese (繁體中文)\")\n",
+    "\n",
+    "class Analysis(BaseModel):\n",
+    "    pro: Pro = Field(description=\"文章的優點\")\n",
+    "    con: Con = Field(description=\"文章可以改進的地方\")\n",
+    "    revised: str = Field(..., description=\"在盡可能不改動原本的文章的前提下，給出一個改進的範本。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "842bf911-bd91-403c-a069-ddb953824868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = dedent(\"\"\"\\\n",
+    "    你是一位擁有多年中文教學經驗的作文指導老師，專門輔導國小三年級學生改進作文。請以耐心、清楚、溫和、鼓勵的方式給予回饋。\n",
+    "\n",
+    "    你的任務包括：\n",
+    "\n",
+    "    1. 仔細閱讀學生的作文，以國小三年級程度為基準給出分析。\n",
+    "    2. 條理清楚地指出文章的優點（如用詞、句子、內容、情感、結構等）。\n",
+    "    3. 指出需要改進的地方，並說明原因，但要以溫和易懂的語氣表達。\n",
+    "    4. 提供具體的改進建議，並解釋這些建議如何讓文章更好。\n",
+    "    5. 提供一份修改後的作文範例，長度與語句難度需符合國小三年級程度。\n",
+    "    6. 回覆格式需包含：\n",
+    "       - 文章優點\n",
+    "       - 需要改進的地方\n",
+    "       - 改進建議\n",
+    "       - 範例作文（改寫版）\n",
+    "\n",
+    "    請始終保持鼓勵、正面與耐心的口氣。\n",
+    "\"\"\")\n",
+    "\n",
+    "system_message = SystemMessage(content=system_prompt)\n",
+    "\n",
+    "human_prompt = PromptTemplate(template=\"{article}\\n\\nOutput instruction: {format_instructions}\",\n",
+    "                              input_variables=[\"article\"],\n",
+    "                              partial_variables={'format_instructions': format_instructions}\n",
+    "                              )\n",
+    "human_message = HumanMessagePromptTemplate(prompt=human_prompt) \n",
+    "\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
+    "                                                 human_message\n",
+    "                                               ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8311ffd-3397-4f69-ae4d-fcf4a40c0c5e",
+   "metadata": {},
+   "source": [
+    "https://mhups-cloud1.mhups.tp.edu.tw/magazines/21st/articles/3rd/301.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4d7aedc-a03b-4bbb-a20d-cc41272c343e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article = dedent(\"\"\"\n",
+    "台灣有一個有名地方叫做淡水。爸爸、媽媽每次帶我和哥哥、弟弟去淡水\n",
+    "玩，我們都會去淡水老街喝魚丸湯和吃飯。\n",
+    " 淡水老街以前有魚腥味，現在卻沒有了。從捷運站走出來，中正路及延伸\n",
+    "的重建街、清水街一帶，就是鼎鼎大名的淡水老街。淡水老街分成內外兩側，\n",
+    "外側是靠淡水河岸的金色水岸步道，肉側是個傳統老街，這裡兩旁林立熱鬧商\n",
+    "店，有濃濃古早味的餅舖、雜貨店，也有賣潮流服飾與玩具。此區著名的人氣\n",
+    "美食如阿給、魚丸、魚酥、古早味現烤蛋糕、阿婆鐵蛋等，都是來到這裡必吃\n",
+    "不可的美食。\n",
+    " 淡水有一個好吃的小吃叫做魚丸湯，它雖然很燙，卻很好吃，但是如果是\n",
+    "冬天吃就不會燙，可是如果是夏天吃，就會很燙，不過吹一吹就好了。我喜歡\n",
+    "喝魚丸湯，因為裡面的魚丸有加肉，而且燙燙的可以讓我身體變溫暖，又不會\n",
+    "像夏天喝太燙。魚丸湯是在淡水老街裡，受著大家喜愛的小吃之一。其實魚丸\n",
+    "湯很好做又好吃。煮水，滾後下薑片或薑絲，再煮一下，加入魚丸，水滾後加\n",
+    "鹽調味，芹菜去老皮後切一點末，即可上桌，撒上芹菜，滴兩滴香油，灑上一\n",
+    "點胡椒粉，魚丸湯完成了！\n",
+    " 去了淡水老街和喝了魚丸湯後，我覺得好好玩，因為老街有很多好吃好玩\n",
+    "的東西，還有很多美麗又漂亮的服飾，所以讓我很想再去。要是每天都可以去\n",
+    "淡水老街那該多好呀！如果爸爸、媽媽帶我和哥哥、弟弟去淡水玩，那我一定\n",
+    "會去老街吃飯、喝魚丸湯和看看風景的。\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1997b4f-1ac9-4a6d-b98f-28a673b81157",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func_call(text):\n",
+    "    # your model.invoke() returns something like Analysis(...)\n",
+    "    prompt = chat_prompt.invoke({\"article\": text})\n",
+    "\n",
+    "    output = model.invoke(prompt)\n",
+    "    \n",
+    "    parsed_output = output_parser.parse(output.content)\n",
+    "\n",
+    "    # Convert Pydantic model to individual outputs:\n",
+    "    pro_text = \"\\n\".join(parsed_output.pro.name)\n",
+    "    con_text = \"\\n\".join(parsed_output.con.name)\n",
+    "    revised_text = parsed_output.revised\n",
+    "\n",
+    "    return pro_text, con_text, revised_text\n",
+    "\n",
+    "\n",
+    "with gr.Blocks(title=\"作文分析助教\") as demo:\n",
+    "    gr.Markdown(\"### 作文分析助教\")\n",
+    "\n",
+    "    with gr.Row():\n",
+    "        # ----- LEFT SIDE -----\n",
+    "        with gr.Column(scale=1):\n",
+    "            input_box = gr.Textbox(\n",
+    "                lines=3,\n",
+    "                placeholder=\"請輸入作文內容...\",\n",
+    "                label=\"學生作文\"\n",
+    "            )\n",
+    "\n",
+    "            # Examples under the input\n",
+    "            gr.Examples(\n",
+    "                examples=[[\"我今天和家人去公園玩...\"], [\"今天天氣很好，我和朋友一起...\"]],\n",
+    "                inputs=input_box,\n",
+    "                examples_per_page=None\n",
+    "            )\n",
+    "\n",
+    "            # Buttons side-by-side\n",
+    "            with gr.Row():\n",
+    "                submit_btn = gr.Button(\"提交\", variant=\"primary\")\n",
+    "                clear_btn = gr.ClearButton([input_box], value=\"清除\")\n",
+    "\n",
+    "        # ----- RIGHT SIDE -----\n",
+    "        with gr.Column(scale=2):\n",
+    "            pro_box = gr.Textbox(\n",
+    "                lines=5,\n",
+    "                label=\"文章優點（pro）\",\n",
+    "                interactive=False\n",
+    "            )\n",
+    "            con_box = gr.Textbox(\n",
+    "                lines=5,\n",
+    "                label=\"文章可以改進的地方（con）\",\n",
+    "                interactive=False\n",
+    "            )\n",
+    "            revised_box = gr.Textbox(\n",
+    "                lines=12,\n",
+    "                label=\"改寫範本（revised）\",\n",
+    "                interactive=False\n",
+    "            )\n",
+    "\n",
+    "    # Button logic\n",
+    "    submit_btn.click(\n",
+    "        fn=func_call,\n",
+    "        inputs=input_box,\n",
+    "        outputs=[pro_box, con_box, revised_box]\n",
+    "    )\n",
+    "\n",
+    "    clear_btn.add([pro_box, con_box, revised_box])\n",
+    "\n",
+    "demo.launch()"
    ]
   },
   {
